--- a/Gpic/MainWindow.xaml
+++ b/Gpic/MainWindow.xaml
@@ -8,6 +8,8 @@
         xmlns:b="clr-namespace:Gpic.Shortcuts.Bindings"
         xmlns:ss="clr-namespace:Gpic.Shortcuts" xmlns:converters="clr-namespace:Gpic.Converters"
         xmlns:editor="clr-namespace:Gpic.Editor"
+        xmlns:gpic="clr-namespace:Gpic"
+        xmlns:viewModels="clr-namespace:Gpic.Core.Editor.Tools.Brushes.ViewModels;assembly=Gpic.Core"
         mc:Ignorable="d"
         Title="General Purpose Image Composer" Height="576" Width="1024"
         Style="{StaticResource CustomWindowStyleEx}"
@@ -178,10 +180,12 @@
                     </TabControl.ItemTemplate>
                     <TabControl.ContentTemplate>
                         <DataTemplate DataType="{x:Type vm:CanvasViewModel}">
-                            <editor:CanvasControl Background="{DynamicResource PanelBackground1}"
-                                                  Editor="{Binding DataContext, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TabControl}}}"
-                                                  Canvas="{Binding .}"
-                                                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                            <Grid>
+                                <editor:CanvasControl x:Name="Canvas" Background="{DynamicResource PanelBackground1}"
+                                                      Editor="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}"
+                                                      Canvas="{Binding .}"
+                                                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                            </Grid>
                         </DataTemplate>
                     </TabControl.ContentTemplate>
                 </TabControl>
